--- a/src/views/manage/manage.css
+++ b/src/views/manage/manage.css
@@ -1,3 +1,13 @@
+.slide-fade-enter-active {
+  transition: all .3s ease;
+}
+.slide-fade-leave-active {
+  transition: all .8s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+}
+.slide-fade-enter, .slide-fade-leave-active {
+  transform: translateX(10px);
+  opacity: 0;
+}
 /* main container */
 .main-container {
   position: absolute;
@@ -26,4 +36,8 @@
 
 .el-pagination {
   margin-left: -40px;
+}
+
+.el-autocomplete {
+  width: 30%;
 }
