--- a/src/views/statistic/statistic.css
+++ b/src/views/statistic/statistic.css
@@ -48,13 +48,13 @@
 }
 
 .el-card {
-  height: 350px;
+  height: 600px;
   transition: .5s;
 }
 
-.el-card.active {
-  height: 600px;
-}
+/*.el-card.active {*/
+  /*height: 600px;*/
+/*}*/
 
 .card-title {
   text-align: center;
